# Lyrona

./: .gitignore  README.md  app.py  display.py  pyproject.toml  requirements.txt  timing.py  vlc_runtime.py
.github/workflows/: release.yml
scripts/: build_standalone.py
